--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,7 @@ services:
       SERVICE_NAME: product-service
       SERVICE_PORT: 8000
       LOG_LEVEL: INFO
+      PYTHONUNBUFFERED: 1
     ports:
       - "8001:8000"
     depends_on:
@@ -94,9 +95,9 @@ services:
       sh -c "
         echo 'Starting Product Service API...' &&
         uvicorn app.main:app --host 0.0.0.0 --port 8000 &
-        sleep 10 &&
+        sleep 15 &&
         echo 'Starting Product Service Consumer...' &&
-        python run_consumer.py
+        python -u run_consumer.py
       "
 
   # Order Service
@@ -145,6 +146,7 @@ services:
       SERVICE_PORT: 8000
       LOG_LEVEL: INFO
       EMAIL_SERVICE: console
+      PYTHONUNBUFFERED: 1
     ports:
       - "8003:8000"
     depends_on:
@@ -155,11 +157,10 @@ services:
     restart: unless-stopped
     command: >
       sh -c "
-        echo 'Starting Notification Service API (minimal)...' &&
-        uvicorn app.main:app --host 0.0.0.0 --port 8000 &
-        sleep 5 &&
+        echo 'Waiting for RabbitMQ to be ready...' &&
+        sleep 10 &&
         echo 'Starting Notification Service Consumer...' &&
-        python run_consumer.py
+        python -u run_consumer.py
       "
 
   # Prometheus (Monitoring)
